	between files.
	* info/info.h, info/session.h: Declarations of read_function_name,
	show_error_node moved.
	* info/makedoc.c (doc_header_1, main): Add include of "window.h" to
	generated files.
	* info/session.c, info/variables.c (info_scroll_choices)
	(scroll_last_node_choices): Moved between files and declared static.
	* info/variables.h: Declare 'mouse_protocol'.

2014-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c: Move "Garbage Collection" and "Navigation of
	document structure" sections to reduce need for forward function
	declarations.
	* info/session.c (file_buffer_of_window, node_printed_rep): Moved
	between files.

	* info/indices.c (info_virtual_index),
	* info/nodemenu.c (nodemenu_format_info),
	* info/session.c (info_select_reference, info_follow_menus): Remove
	unused local variables.

	* info/info.h: Remove declaration for removed variable.
	(info_toupper, info_tolower): Removed.  Use toupper and tolower
	instead.
	* info/info.h, info/nodes.h (strict_node_location_p): Declaration
	moved.

	* info/info.c, info/session.c (debug_file, close_debugfile)
	(debug_level, vinfo_debug)
	(info_debug, info_error_rings_bell_p, info_error, show_error_node)
	Moved between files.
	(vinfo_debug, vinfo_error): Declared static.
	* info/info.h (program_name): Declaration added.
	(info_error_rings_bell_p): Declaration removed.
	* info/info.h, info/session.h (debug): Macro definition moved.

	* info/session.h: Remove unnecessary declarations of functions that
	are defined with DECLARE_INFO_COMMAND and not used outside of their
	containing source files.
	* info/session.c: Add declarations of DECLARE_INFO_COMMAND functions
	as necessary.  Reorder some functions to be used after they are
	defined.
	(forward_move_node_structure): Call info_parse_and_select instead of
	info_top_node.

2014-09-10  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (display_scroll_region): New function.